@@ -47,6 +47,7 @@ http_receive_json_data=yes
 http_method=put
 http_msgdb_socket=/tmp/rrr-test-msgdb-put.sock
 http_msgdb_poll_interval_s=3
+http_silent_put_error_limit_s=1
 
 #####
 
